Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Markovsentence</h1>
-      <h2 class="project-tagline">now begin</h2>
+      <h2 class="project-tagline">here is some information about markovsentence</h2>
       <a href="https://github.com/zhouwei93/markovsentence" class="btn">View on GitHub</a>
-      
-      
+      <a href="https://github.com/zhouwei93/markovsentence/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/zhouwei93/markovsentence/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <p>where to begin welcome</p>
+      <p>Markovian-tweets,consume a text file with sentences and produce a tweet  with the style of the input text.  the base level is Markov Sentence Generation from the sample text, and we can generate the tweet in someone's style.</p>
+
+<p>then we can generate the tweet like this :</p>
+
+<p>The right of Iraqis to educate their children in their mother tongue, such as the Council of Represent
+atives, the Council of Representatives, the Council of Representatives, the Council of Representatives, the Co
+uncil of Representatives, the Council of Representatives, the Council of Representatives, the Council of Repre
+sentatives, the Council of Representatives, the Council of Representatives, the Council of Ministers, courts, 
+and official conferences, in either of the term official language if the majority of its population so decide </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/zhouwei93/markovsentence">Markovsentence</a> is maintained by <a href="https://github.com/zhouwei93">zhouwei93</a>.</span>
